--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
     "content_scripts": [
       {
         "matches": ["*://*.www.google.com/search*"],
-        "js": ["contentScript.js"]
+        "js": ["../contentScript.js"]
       }
     ],
     "icons": {
