--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,30 @@
 {
-    "manifest_version": 2,
-    "name": "Allow me to click Google Maps",
-    "version": "1.0",
-    "description": "Allows user to go to maps from search results in google since it is impossible and has to be explicitly done by searching maps",
-    "permissions": [
-      "tabs",
-      "activeTab",
-      "webNavigation",
-      "*://www.google.com/*"
-    ],
-    "content_scripts": [
-      {
-        "matches": ["*://*.www.google.com/search*"],
-        "js": ["contentScript.js"]
-      }
-    ],
-    "icons": {
-      "48": "icons/icon.png"
+  "manifest_version": 3,
+  "name": "Allow me to click Google Maps",
+  "version": "1.0",
+  "description": "Allows user to go to maps from search results in google since it is impossible and has to be explicitly done by searching maps",
+  "permissions": [
+    "webNavigation"
+  ],
+  "host_permissions": [
+    "*://www.google.com/*"
+  ],
+  "content_scripts": [
+    {
+      "matches": [
+        "*://*.www.google.com/search*"
+      ],
+      "js": [
+        "contentScript.js"
+      ]
+    }
+  ],
+  "icons": {
+    "48": "icons/icon.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{da2548fd-1936-42e2-a339-8c51bbe057a3}"
     }
   }
+}
